# eosc-search-service

./: .env.template  .gitignore  .pylintrc  .readthedocs.yaml  .tool-versions  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  dc-test.yml  docker-compose.ci.yml  docker-compose.yaml  docker-compose.yml  openapi.yaml  package-lock.json  package.json  setup.cfg
.github/ISSUE_TEMPLATE/: epic-template.md  ux-dev-template.md
.github/workflows/: add-pr-instance-comment.yaml  automatic-release.yml  backend-styles.yml  commitlint.yml  pre-commit.yaml  release.yaml  release.yml  styles.yml  test.yml  trigger-release.yml  ui-styles.yml
.openapi-generator/: FILES
backend/: .gitignore  CITATION.cff  Dockerfile  Pipfile  README.md  alembic.ini  eosc-search-service-v1.yaml  pyproject.toml
backend/alembic/: env.py
backend/app/: apis.py  config.py  consts.py  database.py  db.py  deps.py  log_config.py  main.py  manager.py  middlewares.py  models.py  server.py  settings.py  tasks.py
backend/tests/: conftest.py  (+4 more)
frontend/: package.json
loader/: README.md
old/: .gitignore  README.md
scripts/: regenerate.sh
solr/: create-collection.sh  delete-collection.sh
tests/: conftest.py  test_default_api.py
transform/: .env.template  Dockerfile  Pipfile  README.md  README.rst  docker-compose.dev.yml  docker-compose.yml  process.py  pyproject.toml  spark.conf  tsv-to-jsonl-1.py
ui/: .eslintignore  .eslintrc.json  .gitignore  README.md  angular.json  migrations.json  nx.json  package-lock.json  package.json  set-package-json-version.js  tsconfig.base.json  tsconfig.json
(+1506 files in other folders)
