[metadata]
name = search_service
version = 1.0.0-alpha0
description = EOSC Search Service
long_description = file: README.md
keywords = OpenAPI Search Service
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
